<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>



    <groupId>org.rapidpm.demo</groupId>
    <artifactId>JavaMagazin-001</artifactId>
    <name>javamagazin-001-cdi-javafx-bootstraping</name>
    <description>JavaMagazin Artikel CDI-JavaFX-bootstraping</description>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <nexus.ip>nexus.rapidpm.org</nexus.ip>
        <!--<fx.home>C:\Program Files\Java\jdk1.7.0_45\jre\lib\</fx.home>-->
    </properties>

    <dependencyManagement>
        <dependencies>            <!-- Weld Container -->
            <dependency>
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-core-bom</artifactId>
                <version>2.0.4.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.se</groupId>
                <artifactId>weld-se</artifactId>
                <version>2.0.4.Final</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>org.jboss.shrinkwrap.resolver</groupId>
                <artifactId>shrinkwrap-resolver-bom</artifactId>
                <version>2.0.0</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.jboss.shrinkwrap</groupId>
                <artifactId>shrinkwrap-depchain</artifactId>
                <version>1.2.0</version>
                <type>pom</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>1.1.0.Final</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.jboss.shrinkwrap.descriptors</groupId>
                <artifactId>shrinkwrap-descriptors-bom</artifactId>
                <version>2.0.0-alpha-5</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.17</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>org.rapidpm.modul</groupId>
                <artifactId>cdi-commons</artifactId>
                <version>1.2-SNAPSHOT</version>
                <scope>compile</scope>
                <type>jar</type>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>


        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>com.oracle.javafx</groupId>
            <artifactId>javafx</artifactId>
            <version>2.2</version>
            <systemPath>${fx.home}/jfxrt.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld.se</groupId>
            <artifactId>weld-se</artifactId>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <!--Arquillian-->
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-depchain</artifactId>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap</groupId>
            <artifactId>shrinkwrap-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap</groupId>
            <artifactId>shrinkwrap-impl-base</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <!--<dependencies>-->
                <!--<dependency>-->
                <!--<groupId>org.apache.maven.surefire</groupId>-->
                <!--<artifactId>surefire-junit47</artifactId>-->
                <!--<version>2.16</version>-->
                <!--</dependency>-->
                <!--</dependencies>-->
                <configuration>
                    <!--<skipTests>true</skipTests>-->
                    <!--<forkCount>2.5C</forkCount>-->
                    <!--<forkCount>1</forkCount>-->
                    <!--<parallel>methods</parallel>-->
                    <!--<threadCount>10</threadCount>-->
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                    <!--<argLine>-Xmx1024m</argLine>-->
                    <!--<forkMode>always</forkMode>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-repository-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>

        </plugins>
    </build>

    <!--for development of features/develop branch-->
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>RapidPM Releases</name>
            <url>http://${nexus.ip}/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>RapidPM Snapshots</name>
            <url>http://${nexus.ip}/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>


    <profiles>
        <profile>
            <id>junit</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/junit/**</include>
                            </includes>
                            <excludes>
                                <exclude>**/perf/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>performance</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/perf/**</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <id>arquillian_weld-ee-embedded-11</id>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.arquillian.container</groupId>
                    <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
                    <version>1.0.0.CR7</version>
                </dependency>
                <dependency>
                    <groupId>org.jboss.weld</groupId>
                    <artifactId>weld-core</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.jboss.weld</groupId>
                    <artifactId>weld-api</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.jboss.spec</groupId>
                    <artifactId>jboss-javaee-6.0</artifactId>
                    <version>3.0.2.Final</version>
                    <type>pom</type>
                    <scope>provided</scope>
                </dependency>
            </dependencies>


        </profile>


    </profiles>

    <inceptionYear>2013</inceptionYear>
    <organization>
        <name>RapidPM</name>
        <url>http://www.rapidpm.org</url>
    </organization>
    <scm>
        <url>https://bitbucket.org/rapidpm/javamagazin-001-cdi-bootstrapping</url>
        <connection>scm:git:https://bitbucket.org/rapidpm/javamagazin-001-cdi-bootstrapping.git</connection>
        <developerConnection>scm:git:https://bitbucket.org/rapidpm/javamagazin-001-cdi-bootstrapping.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>Sven Ruppert</name>
            <email>sven.ruppert@rapidpm.org</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <issueManagement>
        <system>Jira</system>
        <url>https://bitbucket.org/rapidpm/rapidpm-modules/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Jenkins</system>
        <url>http://jenkins.rapidpm.org/job/rapidpm-modules/</url>
        <!--<notifiers>-->
        <!--<notifier></notifier>-->
        <!--</notifiers>-->
    </ciManagement>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

</project>